--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.show {
+    display: block !important;
+}
+
+.hide {
+    display: none !important;
+}
+
+.display-flex {
+    visibility: visible !important;
+}
+
+.hide-flex {
+    visibility: hidden !important;
+}
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "~ngx-bootstrap/datepicker/bs-datepicker";
